--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -26,6 +26,23 @@
     --tw-content: "";
 }
 
+html {
+    scroll-behavior: smooth;
+}
+body::-webkit-scrollbar {
+    width: 12px;
+}
+  
+body::-webkit-scrollbar-track {
+    background: linear-gradient(to top, rgb(148, 106, 43), #DA6220);
+}
+  
+body::-webkit-scrollbar-thumb {
+    background-color: #DA6220;
+    border-radius: 20px;
+    border: 3px solid rgb(253, 246, 236);
+}
+
 /*
 1. Use a consistent sensible line-height in all browsers.
 2. Prevent adjustments of font size after orientation changes in iOS.
@@ -2478,6 +2495,37 @@ input#nav-toggle:checked ~ #nav-menu {
 .navbar-nav {
     text-align: center;
 }
+
+.nav-button {
+    border: 3px solid transparent;
+    background-color: #f1f1f1;
+    border-radius: 999px;
+
+
+    color: white;
+    cursor: pointer;
+    transition: all 0.15s ease-in;
+}
+
+.nav-button a{
+    background-color: transparent;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: black;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+}
+.nav-button:hover {
+    border: 3px solid #DA6220;
+    background-color: transparent;
+    color: #DA6220;
+}
+
+.nav-button a:hover {
+    color: #DA6220;
+    font-weight: 600;
+}
+
 @media (min-width: 1024px) {
     .navbar-nav {
         text-align: left;
