--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,9 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-.kiw{
-    @apply bg-red-500;
-}
 .inputan {
     @apply shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5;
+}
+
+.tag-article {
+    @apply bg-blue-500 text-white border rounded px-3 py-1 text-sm hover:bg-blue-600 hover:text-gray-300;
+}
+
+.tag-card {
+    @apply text-xs text-gray-800 border border-gray-500 px-3 py-1 rounded hover:bg-gray-200;
 }
