--- a/public/assets/css/landing-page.css
+++ b/public/assets/css/landing-page.css
@@ -2,7 +2,7 @@
 
 /* carousel */
 .carousel{
-    height: 100vh;
+    height: calc(116vh - 106px);
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -114,7 +114,7 @@
 /* arrows */
 .arrows{
     position: absolute;
-    top: 90%;
+    top: 88%;
     right: 52%;
     z-index: 20;
     width: 300px;
@@ -124,10 +124,10 @@
     align-items: center;
 }
 .arrows button{
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
-    background-color: #DA6220;
+    background: linear-gradient(to left, #6b2108, #f1683a);
     border: none;
     color: #fff;
     font-family: monospace;
@@ -135,7 +135,7 @@
     transition: .5s;
 }
 .arrows button:hover{
-    background-color: #fff;
+    background: linear-gradient(to left, #886153, #ffffff);
     color: #000;
 }
 
