--- a/public/assets/css/landing-page.css
+++ b/public/assets/css/landing-page.css
@@ -304,3 +304,70 @@
 
 
 
+/* Dokumen Page */
+/* .jumbotronDokumen {
+    background-image: url('https://images.unsplash.com/photo-1612838320303-4b3b3b3b3b3b');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 2em;
+    font-weight: 500;
+} */
+
+.jumbotronDokumen {
+    background-image: url(../img/document.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 80vh;
+    position: relative;
+    background-color: #DA6220;
+    background-attachment: fixed;
+    grid-row: 1 / 2;
+}
+
+.jumbotron-dokumen-description {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+}
+
+.jumbotron-dokumen-description h5 {
+    font-size: 1rem;
+    color: white;
+    text-align: left;
+    text-transform: uppercase;
+    padding: 0 5rem;
+    margin-top: 18%; 
+    font-family: 'Gilda Display', serif;; 
+    line-height: 1.2;
+    font-weight: 400; 
+    letter-spacing: 6px; 
+    margin-bottom: 10px;
+}
+
+.jumbotron-dokumen-description h1 {
+    font-size: 60px; 
+    color: white;
+    text-align: left;
+    padding: 0 5rem;
+    font-family: 'Gilda Display', serif;
+    font-weight: 500; 
+    line-height: 1.2; 
+}
+
+.dokumen-description h1 {
+    font-size: 60px; 
+    color: black;
+    text-align: left;
+    padding: 0 5rem;
+    font-family: 'Gilda Display', serif;
+    font-weight: 500; 
+    line-height: 1.2; 
+}
