--- a/public/assets/css/landing-page.css
+++ b/public/assets/css/landing-page.css
@@ -362,12 +362,95 @@
     line-height: 1.2; 
 }
 
-.dokumen-description h1 {
+
+/* Article page */
+.jumbotronArticle {
+    background-image: url(../img/article.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 80vh;
+    position: relative;
+    background-color: #DA6220;
+    background-attachment: fixed;
+    grid-row: 1 / 2;
+}
+
+.jumbotron-article-description {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+}
+
+.jumbotron-article-description h5 {
+    font-size: 1rem;
+    color: white;
+    text-align: left;
+    text-transform: uppercase;
+    padding: 0 5rem;
+    margin-top: 18%; 
+    font-family: 'Gilda Display', serif;; 
+    line-height: 1.2;
+    font-weight: 400; 
+    letter-spacing: 6px; 
+    margin-bottom: 10px;
+}
+
+.jumbotron-article-description h1 {
     font-size: 60px; 
-    color: black;
+    color: white;
     text-align: left;
     padding: 0 5rem;
     font-family: 'Gilda Display', serif;
+    font-weight: 500; 
+    line-height: 1.2; 
+}
+
+/* About Page */
+.jumbotronAbout {
+    background-image: url(../img/about.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 80vh;
+    position: relative;
+    background-color: #DA6220;
+    background-attachment: fixed;
+    grid-row: 1 / 2;
+}
+
+.jumbotron-about-description {
+    display: flex;
+    flex-direction: column;
+    height: 85vh;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+    /* font-family: 'Poppins', sans-serif; */
+    font-size: 2em;
+    font-weight: 500;
+}
+
+.jumbotron-about-description h5 {
+    font-size: 1rem;
+    color: white;
+    text-align: center;
+    padding: 0 5rem;
+    margin-top: 1%; 
+    line-height: 1.8;
+    font-weight: 400; 
+    /* letter-spacing: 6px;  */
+    margin-bottom: 3%;
+    width: 70%;
+}
+
+.jumbotron-about-description h1 {
+    font-size: 60px; 
+    color: white;
+    text-align: left;
+    text-transform: uppercase;
+    /* font-family: 'Gilda Display', serif; */
     font-weight: 500; 
     line-height: 1.2; 
 }
