--- a/public/assets/css/landing-page.css
+++ b/public/assets/css/landing-page.css
@@ -446,7 +446,8 @@
 }
 
 .jumbotron-about-description h1 {
-    font-size: 60px; 
+    width: 70%;
+    font-size: 40px; 
     color: white;
     text-align: center;
     text-transform: uppercase;
