--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2057,6 +2057,21 @@ select:invalid {
         var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
     box-shadow: 0px 15px 34px rgba(0, 0, 0, 0.1);
 }
+.card-1 {
+    position: relative;
+    height: 35em;
+    border-radius: 0.75rem;
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+    padding: 1.25rem;
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
+        0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),
+        0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+        var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    box-shadow: 0px 15px 34px rgba(0, 0, 0, 0.1);
+}
 .card-img {
     width: 100%;
 }
