--- a/public/assets/css/landing-page.css
+++ b/public/assets/css/landing-page.css
@@ -8,6 +8,7 @@
     position: relative;
     top: 0;
 }
+
 .carousel .list .item{
     width: 100%;
     height: 100%;
@@ -19,6 +20,18 @@
     height: 100%;
     object-fit: cover;
 }
+
+.carousel .list .item .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.007), rgba(0, 0, 0, 0.041));
+    z-index: 1;
+    pointer-events: none; 
+}
+
 .carousel .list .item .content{
     position: absolute;
     top: 20%;
