Desain landing pages

--- a/public/assets/css/landing-page.css
+++ b/public/assets/css/landing-page.css
@@ -15,10 +15,12 @@
     position: absolute;
     inset: 0 0 0 0;
 }
-.carousel .list .item img{
+.carousel .list .item img,
+.carousel .list .item video{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: 0;
 }
 
 .carousel .list .item .overlay {
@@ -27,8 +29,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.007), rgba(0, 0, 0, 0.041));
-    z-index: 1;
+    background: linear-gradient(to bottom right, rgba(58, 43, 192, 0.219), rgba(0, 0, 0, 0));
+    z-index: 0;
     pointer-events: none; 
 }
 
@@ -56,6 +58,9 @@
   color: #f1683a;
   top: -10%;
   position: absolute;
+  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: black;
+  z-index: 10;
 }
 .carousel .list .item .topic{
     color: #f1683a;
@@ -68,6 +73,8 @@
     z-index: 30;
     position: absolute;
     width: 60%;
+      -webkit-text-stroke-width: 0.7px;
+  -webkit-text-stroke-color: rgb(255, 255, 255);
 }
 .carousel .list .item .buttons{
     display: grid;
@@ -104,11 +111,13 @@
     flex-shrink: 0;
     position: relative;
 }
-.thumbnail .item img{
+.thumbnail .item img, 
+.carousel .list .item video{
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 20px;
+    z-index: 0;
 }
 .thumbnail .item .content{
     color: #fff;
@@ -307,6 +316,11 @@
     }
     .carousel .list .item .content .title{
         font-size: 30px;
+        top: 45%;
+    }
+    .carousel .list .item .des{
+        font-size: 20px;
+        width: 70%;
     }
 
     .thumbnail .item{
