--- a/public/assets/css/landing-page.css
+++ b/public/assets/css/landing-page.css
@@ -29,7 +29,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom right, rgba(58, 43, 192, 0.219), rgba(0, 0, 0, 0));
+    background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.322), rgba(0, 0, 0, 0));
     z-index: 0;
     pointer-events: none; 
 }
@@ -58,8 +58,6 @@
   color: #f1683a;
   top: -10%;
   position: absolute;
-  -webkit-text-stroke-width: 3px;
-  -webkit-text-stroke-color: black;
   z-index: 10;
 }
 .carousel .list .item .topic{
@@ -389,6 +387,29 @@
     line-height: 1.2; 
 }
 
+@media (max-width: 768px) {
+    .jumbotron-dokumen-description h5 {
+        text-align: center;
+        padding: 0 5rem;
+        margin-top: 48%; 
+    }
+
+    .jumbotron-dokumen-description h1 {
+        text-align: center;
+    }
+}
+
+@media (max-width: 640px) {
+    .jumbotron-dokumen-description h5 {
+        text-align: center;
+        padding: 0 5rem;
+        margin-top: 58%; 
+    }
+
+    .jumbotron-dokumen-description h1 {
+        text-align: center;
+    }
+}
 
 /* Article page */
 .jumbotronArticle {
@@ -433,6 +454,29 @@
     line-height: 1.2; 
 }
 
+@media (max-width: 768px) {
+    .jumbotron-article-description h5 {
+        text-align: center;
+        padding: 0 5rem;
+        margin-top: 48%; 
+    }
+
+    .jumbotron-article-description h1 {
+        text-align: center;
+    }
+}
+
+@media (max-width: 640px) {
+    .jumbotron-article-description h5 {
+        text-align: center;
+        padding: 0 5rem;
+        margin-top: 58%; 
+    }
+
+    .jumbotron-article-description h1 {
+        text-align: center;
+    }
+}
 /* About Page */
 .jumbotronAbout {
     background-image: url(../img/about.jpg);
@@ -481,4 +525,56 @@
     /* font-family: 'Gilda Display', serif; */
     font-weight: 500; 
     line-height: 1.2; 
+}
+
+@media (max-width: 768px) {
+    .jumbotron-about-description h5 {
+        text-align: center;
+        padding: 0 5rem;
+        margin-top: 6%; 
+        font-size: 15px;
+        width: 100%; 
+    }
+
+    .jumbotron-about-description h1 {
+        text-align: center;
+        font-size: 17px;
+        width: 100%; 
+        margin-top: 5%; 
+    }
+}
+
+@media (max-width: 640px) {
+    .jumbotron-about-description h5 {
+        text-align: center;
+        padding: 0 5rem;
+        margin-top: 3%; 
+        font-size: 14px;
+        width: 100%; 
+    }
+
+    .jumbotron-about-description h1 {
+        text-align: center;
+        font-size: 17px;
+        width: 100%; 
+        margin-top: 25%; 
+    }
+}
+
+
+/* floating */
+@keyframes floating {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.floating-image {
+    animation: floating 3s ease-in-out infinite;
 }
