--- a/public/assets/css/landing-page.css
+++ b/public/assets/css/landing-page.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* carousel */
-.carousel{
+.carousel {
     height: calc(116vh - 106px);
     width: 100%;
     overflow: hidden;
@@ -9,14 +9,14 @@
     top: 0;
 }
 
-.carousel .list .item{
+.carousel .list .item {
     width: 100%;
     height: 100%;
     position: absolute;
     inset: 0 0 0 0;
 }
 .carousel .list .item img,
-.carousel .list .item video{
+.carousel .list .item video {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -29,12 +29,16 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.322), rgba(0, 0, 0, 0));
+    background: linear-gradient(
+        to bottom right,
+        rgba(0, 0, 0, 0.322),
+        rgba(0, 0, 0, 0)
+    );
     z-index: 0;
-    pointer-events: none; 
+    pointer-events: none;
 }
 
-.carousel .list .item .content{
+.carousel .list .item .content {
     position: absolute;
     top: 20%;
     width: 1140px;
@@ -48,53 +52,53 @@
 }
 
 .carousel .list .item .title,
-.carousel .list .item .topic{
+.carousel .list .item .topic {
     font-size: 3em;
     font-weight: bold;
     line-height: 1.3em;
 }
 
-.carousel .list .item .title{
-  color: #f1683a;
-  top: -10%;
-  position: absolute;
-  z-index: 10;
+.carousel .list .item .title {
+    color: #f1683a;
+    top: -10%;
+    position: absolute;
+    z-index: 10;
 }
-.carousel .list .item .topic{
+.carousel .list .item .topic {
     color: #f1683a;
 }
 
-.carousel .list .item .des{
+.carousel .list .item .des {
     font-size: 1.3em;
     font-weight: 400;
     top: 60px;
     z-index: 30;
     position: absolute;
     width: 60%;
-      -webkit-text-stroke-width: 0.7px;
-  -webkit-text-stroke-color: rgb(255, 255, 255);
+    -webkit-text-stroke-width: 0.7px;
+    -webkit-text-stroke-color: rgb(255, 255, 255);
 }
-.carousel .list .item .buttons{
+.carousel .list .item .buttons {
     display: grid;
     grid-template-columns: repeat(2, 130px);
     grid-template-rows: 40px;
     gap: 5px;
     margin-top: 20px;
 }
-.carousel .list .item .buttons button{
+.carousel .list .item .buttons button {
     border: none;
     background-color: #eee;
     letter-spacing: 3px;
     font-family: Poppins;
     font-weight: 500;
 }
-.carousel .list .item .buttons button:nth-child(2){
+.carousel .list .item .buttons button:nth-child(2) {
     background-color: transparent;
     border: 1px solid #fff;
     color: #eee;
 }
 /* thumbail */
-.thumbnail{
+.thumbnail {
     position: absolute;
     bottom: 20px;
     left: 55%;
@@ -103,36 +107,36 @@
     display: flex;
     gap: 20px;
 }
-.thumbnail .item{
+.thumbnail .item {
     width: 100px;
     height: 170px;
     flex-shrink: 0;
     position: relative;
 }
-.thumbnail .item img, 
-.carousel .list .item video{
+.thumbnail .item img,
+.carousel .list .item video {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 20px;
     z-index: 0;
 }
-.thumbnail .item .content{
+.thumbnail .item .content {
     color: #fff;
     position: absolute;
     bottom: 10px;
     left: 10px;
     right: 10px;
 }
-.thumbnail .item .content .title{
+.thumbnail .item .content .title {
     font-weight: 500;
     font-size: 0.7rem;
 }
-.thumbnail .item .content .description{
+.thumbnail .item .content .description {
     font-weight: 300;
 }
 /* arrows */
-.arrows{
+.arrows {
     position: absolute;
     top: 88%;
     right: 52%;
@@ -143,7 +147,7 @@
     gap: 10px;
     align-items: center;
 }
-.arrows button{
+.arrows button {
     width: 45px;
     height: 45px;
     border-radius: 50%;
@@ -152,15 +156,15 @@
     color: #fff;
     font-family: monospace;
     font-weight: bold;
-    transition: .5s;
+    transition: 0.5s;
 }
-.arrows button:hover{
+.arrows button:hover {
     background: linear-gradient(to left, #886153, #ffffff);
     color: #000;
 }
 
 /* animation */
-.carousel .list .item:nth-child(1){
+.carousel .list .item:nth-child(1) {
     z-index: 1;
 }
 
@@ -170,44 +174,43 @@
 .carousel .list .item:nth-child(1) .content .title,
 .carousel .list .item:nth-child(1) .content .topic,
 .carousel .list .item:nth-child(1) .content .des,
-.carousel .list .item:nth-child(1) .content .buttons
-{
+.carousel .list .item:nth-child(1) .content .buttons {
     transform: translateY(50px);
     filter: blur(20px);
     opacity: 0;
-    animation: showContent .5s 1s linear 1 forwards;
+    animation: showContent 0.5s 1s linear 1 forwards;
 }
-@keyframes showContent{
-    to{
+@keyframes showContent {
+    to {
         transform: translateY(0px);
         filter: blur(0px);
         opacity: 1;
     }
 }
-.carousel .list .item:nth-child(1) .content .title{
-    animation-delay: 1.2s!important;
+.carousel .list .item:nth-child(1) .content .title {
+    animation-delay: 1.2s !important;
 }
-.carousel .list .item:nth-child(1) .content .topic{
-    animation-delay: 1.4s!important;
+.carousel .list .item:nth-child(1) .content .topic {
+    animation-delay: 1.4s !important;
 }
-.carousel .list .item:nth-child(1) .content .des{
-    animation-delay: 1.6s!important;
+.carousel .list .item:nth-child(1) .content .des {
+    animation-delay: 1.6s !important;
 }
-.carousel .list .item:nth-child(1) .content .buttons{
-    animation-delay: 1.8s!important;
+.carousel .list .item:nth-child(1) .content .buttons {
+    animation-delay: 1.8s !important;
 }
 /* create animation when next click */
-.carousel.next .list .item:nth-child(1) img{
+.carousel.next .list .item:nth-child(1) img {
     width: 150px;
     height: 220px;
     position: absolute;
     bottom: 50px;
     left: 50%;
     border-radius: 30px;
-    animation: showImage .5s linear 1 forwards;
+    animation: showImage 0.5s linear 1 forwards;
 }
-@keyframes showImage{
-    to{
+@keyframes showImage {
+    to {
         bottom: 0;
         left: 0;
         width: 100%;
@@ -216,32 +219,32 @@
     }
 }
 
-.carousel.next .thumbnail .item:nth-last-child(1){
+.carousel.next .thumbnail .item:nth-last-child(1) {
     overflow: hidden;
-    animation: showThumbnail .5s linear 1 forwards;
+    animation: showThumbnail 0.5s linear 1 forwards;
 }
-.carousel.prev .list .item img{
+.carousel.prev .list .item img {
     z-index: 50;
 }
-@keyframes showThumbnail{
-    from{
+@keyframes showThumbnail {
+    from {
         width: 0;
         opacity: 0;
     }
 }
-.carousel.next .thumbnail{
-    animation: effectNext .5s linear 1 forwards;
+.carousel.next .thumbnail {
+    animation: effectNext 0.5s linear 1 forwards;
 }
 
-@keyframes effectNext{
-    from{
+@keyframes effectNext {
+    from {
         transform: translateX(150px);
     }
 }
 
 /* running time */
 
-.carousel .time{
+.carousel .time {
     position: absolute;
     z-index: 20;
     width: 0%;
@@ -252,29 +255,32 @@
 }
 
 .carousel.next .time,
-.carousel.prev .time{
+.carousel.prev .time {
     animation: runningTime 3s linear 1 forwards;
 }
-@keyframes runningTime{
-    from{ width: 100%}
-    to{width: 0}
+@keyframes runningTime {
+    from {
+        width: 100%;
+    }
+    to {
+        width: 0;
+    }
 }
-
 
 /* prev click */
 
-.carousel.prev .list .item:nth-child(2){
+.carousel.prev .list .item:nth-child(2) {
     z-index: 2;
 }
 
-.carousel.prev .list .item:nth-child(2) img{
+.carousel.prev .list .item:nth-child(2) img {
     animation: outFrame 0.5s linear 1 forwards;
     position: absolute;
     bottom: 0;
     left: 0;
 }
-@keyframes outFrame{
-    to{
+@keyframes outFrame {
+    to {
         width: 150px;
         height: 220px;
         bottom: 50px;
@@ -283,52 +289,49 @@
     }
 }
 
-.carousel.prev .thumbnail .item:nth-child(1){
+.carousel.prev .thumbnail .item:nth-child(1) {
     overflow: hidden;
     opacity: 0;
-    animation: showThumbnail .5s linear 1 forwards;
+    animation: showThumbnail 0.5s linear 1 forwards;
 }
 .carousel.next .arrows button,
-.carousel.prev .arrows button{
+.carousel.prev .arrows button {
     pointer-events: none;
 }
 .carousel.prev .list .item:nth-child(2) .content .author,
 .carousel.prev .list .item:nth-child(2) .content .title,
 .carousel.prev .list .item:nth-child(2) .content .topic,
 .carousel.prev .list .item:nth-child(2) .content .des,
-.carousel.prev .list .item:nth-child(2) .content .buttons
-{
-    animation: contentOut 1.5s linear 1 forwards!important;
+.carousel.prev .list .item:nth-child(2) .content .buttons {
+    animation: contentOut 1.5s linear 1 forwards !important;
 }
 
-@keyframes contentOut{
-    to{
+@keyframes contentOut {
+    to {
         transform: translateY(-150px);
         filter: blur(20px);
         opacity: 0;
     }
 }
 @media screen and (max-width: 678px) {
-    .carousel .list .item .content{
+    .carousel .list .item .content {
         padding-right: 0;
     }
-    .carousel .list .item .content .title{
+    .carousel .list .item .content .title {
         font-size: 30px;
         top: 45%;
     }
-    .carousel .list .item .content .des{
+    .carousel .list .item .content .des {
         font-size: 17px;
         width: 70%;
         top: 70px;
     }
 
-    .thumbnail .item{
+    .thumbnail .item {
         width: 120px;
         height: 150px;
     }
 }
-
-
 
 /* Dokumen Page */
 /* .jumbotronDokumen {
@@ -353,7 +356,7 @@
     background-repeat: no-repeat;
     height: 80vh;
     position: relative;
-    background-color: #DA6220;
+    background-color: #da6220;
     background-attachment: fixed;
     grid-row: 1 / 2;
 }
@@ -370,29 +373,29 @@
     text-align: left;
     text-transform: uppercase;
     padding: 0 5rem;
-    margin-top: 18%; 
-    font-family: 'Gilda Display', serif;; 
+    margin-top: 18%;
+    font-family: "Gilda Display", serif;
     line-height: 1.2;
-    font-weight: 400; 
-    letter-spacing: 6px; 
+    font-weight: 400;
+    letter-spacing: 6px;
     margin-bottom: 10px;
 }
 
 .jumbotron-dokumen-description h1 {
-    font-size: 60px; 
+    font-size: 60px;
     color: white;
     text-align: left;
     padding: 0 5rem;
-    font-family: 'Gilda Display', serif;
-    font-weight: 500; 
-    line-height: 1.2; 
+    font-family: "Gilda Display", serif;
+    font-weight: 500;
+    line-height: 1.2;
 }
 
 @media (max-width: 768px) {
     .jumbotron-dokumen-description h5 {
         text-align: center;
         padding: 0 5rem;
-        margin-top: 48%; 
+        margin-top: 48%;
     }
 
     .jumbotron-dokumen-description h1 {
@@ -404,7 +407,7 @@
     .jumbotron-dokumen-description h5 {
         text-align: center;
         padding: 0 5rem;
-        margin-top: 58%; 
+        margin-top: 58%;
     }
 
     .jumbotron-dokumen-description h1 {
@@ -420,7 +423,7 @@
     background-repeat: no-repeat;
     height: 80vh;
     position: relative;
-    background-color: #DA6220;
+    background-color: #da6220;
     background-attachment: fixed;
     grid-row: 1 / 2;
 }
@@ -437,29 +440,29 @@
     text-align: left;
     text-transform: uppercase;
     padding: 0 5rem;
-    margin-top: 18%; 
-    font-family: 'Gilda Display', serif;; 
+    margin-top: 18%;
+    font-family: "Gilda Display", serif;
     line-height: 1.2;
-    font-weight: 400; 
-    letter-spacing: 6px; 
+    font-weight: 400;
+    letter-spacing: 6px;
     margin-bottom: 10px;
 }
 
 .jumbotron-article-description h1 {
-    font-size: 60px; 
+    font-size: 60px;
     color: white;
     text-align: left;
     padding: 0 5rem;
-    font-family: 'Gilda Display', serif;
-    font-weight: 500; 
-    line-height: 1.2; 
+    font-family: "Gilda Display", serif;
+    font-weight: 500;
+    line-height: 1.2;
 }
 
 @media (max-width: 768px) {
     .jumbotron-article-description h5 {
         text-align: center;
         padding: 0 5rem;
-        margin-top: 48%; 
+        margin-top: 48%;
     }
 
     .jumbotron-article-description h1 {
@@ -471,7 +474,7 @@
     .jumbotron-article-description h5 {
         text-align: center;
         padding: 0 5rem;
-        margin-top: 58%; 
+        margin-top: 58%;
     }
 
     .jumbotron-article-description h1 {
@@ -486,7 +489,7 @@
     background-repeat: no-repeat;
     height: 80vh;
     position: relative;
-    background-color: #DA6220;
+    background-color: #da6220;
     background-attachment: fixed;
     grid-row: 1 / 2;
 }
@@ -509,9 +512,9 @@
     color: white;
     text-align: center;
     padding: 0 5rem;
-    margin-top: 1%; 
+    margin-top: 1%;
     line-height: 1.8;
-    font-weight: 400; 
+    font-weight: 400;
     /* letter-spacing: 6px;  */
     margin-bottom: 3%;
     width: 70%;
@@ -519,29 +522,29 @@
 
 .jumbotron-about-description h1 {
     width: 70%;
-    font-size: 40px; 
+    font-size: 40px;
     color: white;
     text-align: center;
     text-transform: uppercase;
     /* font-family: 'Gilda Display', serif; */
-    font-weight: 500; 
-    line-height: 1.2; 
+    font-weight: 500;
+    line-height: 1.2;
 }
 
 @media (max-width: 768px) {
     .jumbotron-about-description h5 {
         text-align: center;
         padding: 0 5rem;
-        margin-top: 6%; 
+        margin-top: 6%;
         font-size: 15px;
-        width: 100%; 
+        width: 100%;
     }
 
     .jumbotron-about-description h1 {
         text-align: center;
         font-size: 17px;
-        width: 100%; 
-        margin-top: 5%; 
+        width: 100%;
+        margin-top: 5%;
     }
 }
 
@@ -549,19 +552,18 @@
     .jumbotron-about-description h5 {
         text-align: center;
         padding: 0 5rem;
-        margin-top: 3%; 
+        margin-top: 3%;
         font-size: 14px;
-        width: 100%; 
+        width: 100%;
     }
 
     .jumbotron-about-description h1 {
         text-align: center;
         font-size: 17px;
-        width: 100%; 
-        margin-top: 25%; 
+        width: 100%;
+        margin-top: 25%;
     }
 }
-
 
 /* floating */
 @keyframes floating {
